--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ System/Indexes/Taguri/Taguri/A/segments_26
 *.woff
 *.eot
 *.woff2
+Templates/Designs/TTonline/.idea/.idea.TTonline.dir/riderModule.iml
