Update pagina de companie premium personalizata

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ System/Indexes/Taguri/Taguri/A/segments_26
 *.eot
 *.woff2
 *.iml
+Templates/Designs/TTonlineNew/_parsed/HomepageCustom.parsed.cshtml
