--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ System/Indexes/Taguri/Taguri/A/segments_26
 *.woff2
 *.iml
 Templates/Designs/TTonlineNew/_parsed/HomepageCustom.parsed.cshtml
+Templates/node_modules
